@@ -327,6 +327,9 @@ new Test.Unit.Runner({
     this.assertEqual('classNameTest', Fuse.String('className-test').camelize());
     this.assertEqual('classNameTest', Fuse.String('class-nameTest').camelize());
 
+    this.assertEqual('toString', Fuse.String('toString').camelize(),
+      'Built-in Object.prototype.* members should not interfere');
+
     /*
     this.benchmark(function(){
       'class-name-test'.camelize();
